# CAN2matrix

./: .gitignore  .gitmodules  CAN2matrix.atsln  CMakeLists.txt  README  README.md  doxygen.conf  doxygen.conf.in
CAN2matrix/: CAN2matrix.avrgccproj  CAN2matrix.c  CAN2matrix.cproj  CAN2matrix.dox  CAN2matrix.h  CMakeLists.txt  Makefile  doxygen.conf  makedep.mk  matrix.c  matrix.h
CAN2matrix/adc/: adc.c  adc.dox  adc.h  adc_config.h
CAN2matrix/bar/: bar_config.h
CAN2matrix/can/: can_config_mcp2515.h  can_defs_mcp2515.h  can_error_mcp2515.c  can_init_mcp2515.c  can_mcp2515.dox  can_mcp2515.h  can_receive_mcp2515.c  can_send_mcp2515.c  can_sleep_mcp2515.c
CAN2matrix/comm/: comm.dox  comm_can_ids.h  comm_matrix.c  comm_matrix.h  ic_comm.c  ic_comm.h  matrix.c  matrix.h
CAN2matrix/doc/dot/: comm_ic_fsm.dot  comm_ic_statemachine.dot
CAN2matrix/hardware/: hardware.dox
CAN2matrix/hardware/pcb/: CAN2matrix.brd
CAN2matrix/leds/: leds.c  leds.dox  leds.h  leds_config.h
CAN2matrix/modules/config/: leds_config.h
CAN2matrix/spi/: spi.dox  spi.h
CAN2matrix/timer/: timer.c  timer_config.h
CAN2matrix/tools/: parse_can_trace.pl
CAN2matrix/uart/: uart.dox  uart.h
doc/dot/: comm_ic_statemachine.dot
modules/config/: CMakeLists.txt  adc_config.h  can_config_mcp2515.h  spi_config.h
src/: CAN2matrix.c  CAN2matrix.cproj  CAN2matrix.h  CMakeLists.txt  Makefile
src/comm/: comm.dox  comm_matrix.c  comm_matrix.h  ic_comm.h
tools/: parse_can_trace.pl
